tests/snapshots/snapshots__array_ordered_diff.snap
---
source: tests/snapshots.rs
expression: output
---
$[0]
+ 5

$[1]
+ 4

$[2]
+ 3

$[3]
+ 2

$[1]
- 2

$[2]
- 3

$[3]
- 4

$[4]
- 5

----------------------------------------
4 added, 4 removed, 0 modified
