tests/snapshots/snapshots__set_key_json.snap
---
source: tests/snapshots.rs
assertion_line: 150
expression: output
---
{
  "operations": [
    {
      "op": "remove",
      "path": "$.users[id=2]",
      "value": {
        "id": 2,
        "name": "Bob",
        "role": "user"
      }
    },
    {
      "op": "replace",
      "path": "$.users[id=3].role",
      "oldValue": "user",
      "newValue": "moderator"
    },
    {
      "op": "add",
      "path": "$.users[id=4]",
      "value": {
        "id": 4,
        "name": "Diana",
        "role": "user"
      }
    }
  ],
  "stats": {
    "added": 1,
    "removed": 1,
    "modified": 1
  }
}
