tests/snapshots/snapshots__simple_diff_compact.snap
---
source: tests/snapshots.rs
expression: output
---
$.version
- 1
+ 2

$.enabled
- true
+ false

$.added
+ "new field"
