tests/snapshots/snapshots__simple_diff_pretty.snap
---
source: tests/snapshots.rs
expression: output
---
$.version
- 1
+ 2

$.enabled
- true
+ false

$.added
+ "new field"

----------------------------------------
1 added, 0 removed, 2 modified
